// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress component > renders with custom stroke color 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-default motor1-progress css-dev-only-do-not-override-mncuj7"
    role="progressbar"
  >
    <div
      class="ant-progress-outer"
      style="width: 100%;"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg ant-progress-bg-outer"
          style="width: 75%; height: 8px; --progress-line-stroke-color: red; background: red; --progress-percent: 0.75;"
        />
      </div>
      <span
        class="ant-progress-text ant-progress-text-end ant-progress-text-outer"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress component > renders with default props 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-default motor1-progress css-dev-only-do-not-override-mncuj7"
    role="progressbar"
  >
    <div
      class="ant-progress-outer"
      style="width: 100%;"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg ant-progress-bg-outer"
          style="width: 50%; height: 8px; --progress-percent: 0.5;"
        />
      </div>
      <span
        class="ant-progress-text ant-progress-text-end ant-progress-text-outer"
        title="50%"
      >
        50%
      </span>
    </div>
  </div>
</div>
`;
